feat: admin setting personal deduction
